# sw_same_glasses

./: CMakeLists.txt  README.md  cl_error.cpp  data.cpp  data_sun.csv  gui.cpp  main.cpp  program.cl
include/: cl_error.h  data.h  gui.h
